# hakkaa-firmware

./: .gitignore  Cargo.toml  README-DE.md  README.de.md  README.md  flake.nix
.github/workflows/: ci.yaml
examples/: blinky.rs  eol-test.rs  shake-detection.rs  smile.rs
src/: board.rs  led.rs  lib.rs  switch.rs
