[package]
edition = "2021"
name    = "hakkaa"
version = "0.1.0"

[[bin]]
name = "hakkaa"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "=1.0.0-beta.1", features = ["esp32c3", "log-04", "unstable"] }
log                    = "0.4.27"

critical-section = "1.2.0"
embassy-time = { version = "0.4.0", features = ["log"] }
embassy-executor = { version = "0.7.0", features = ["log", "task-arena-size-20480"] }
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32c3", "log-04"] }
esp-println = { version = "0.14.0", features = ["esp32c3", "log-04"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
