[package]
edition = "2021"
name    = "hakkaa"
version = "0.1.0"

[[bin]]
name = "hakkaa"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "1.0.0", features = ["esp32c3", "log-04", "unstable"] }
log                    = "0.4.27"

critical-section = "1.2.0"
embassy-time = { version = "0.4.0", features = ["log"] }
embassy-executor = { version = "0.9.1", features = ["log"] }
esp-alloc = {version = "0.9.0", features = ["esp32c3"]}
esp-backtrace = { version = "0.18.1", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-radio", "esp32c3", "log-04"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
heapless = "0.8.0"
adjacent-pair-iterator = "1.0.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
